==> alexartenie/Licenta_SW/IO_Toggle/SD_STM32.c <==
#include <stdint.h>
#include <stdbool.h>
#include "diskio.h"
#include "ff.h"
#define CMD0     (0x40+0)     /* GO_IDLE_STATE */
#define CMD1     (0x40+1)     /* SEND_OP_COND */
#define CMD8     (0x40+8)     /* SEND_IF_COND */
#define CMD9     (0x40+9)     /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define SDC_SSI_BASE            SPI2
#define SDC_SSI_SYSCTL_PERIPH   SYSCTL_PERIPH_SSI0
#define SDC_GPIO_PORT_BASE      GPIOD
#define SDC_GPIO_SYSCTL_PERIPH  SYSCTL_PERIPH_GPIOD
#define SDC_SSI_CLK             GPIO_Pin_13
#define SDC_SSI_TX              GPIO_Pin_15
#define SDC_SSI_RX              GPIO_Pin_14
#define SDC_SSI_FSS             GPIO_Pin_2
#define SDC_SSI_PINS            (SDC_SSI_TX | SDC_SSI_RX | SDC_SSI_CLK |SDC_SSI_FSS)

static
void SELECT (void)
{
    GPIO_ResetBits(SDC_GPIO_PORT_BASE, SDC_SSI_FSS);
}

static
void DESELECT (void)
{
    GPIO_SetBits(SDC_GPIO_PORT_BASE, SDC_SSI_FSS);
}

static
void xmit_spi(BYTE dat)
{
    uint32_t ui32RcvDat;
    SELECT();
    //ROM_SSIDataPut(SDC_SSI_BASE, dat); /* Write the data to the tx fifo */
    SPI_SendData(SPI2,dat);

    //ROM_SSIDataGet(SDC_SSI_BASE, &ui32RcvDat); /* flush data read during the write */
    ui32RcvDat=SPI_ReceiveData(SPI2);
   // DESELECT();
}

static
BYTE rcvr_spi (void)
{
    uint32_t ui32RcvDat;
    SELECT();
    //ROM_SSIDataPut(SDC_SSI_BASE, 0xFF); /* write dummy data */
    SPI_SendData(SPI2,0xFF);
    //ROM_SSIDataGet(SDC_SSI_BASE, &ui32RcvDat); /* read data frm rx fifo */
    ui32RcvDat=SPI_ReceiveData(SPI2);
  //  DESELECT();
    return (BYTE)ui32RcvDat;
}
